# Publaryn

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  mise.toml
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: autonomous-publaryn.agent.md
.github/instructions/: continue-publaryn-slice.instructions.md  implement-publaryn-protocol-adapter.instructions.md
.github/prompts/: autonomous-publaryn-roadmap.prompt.md  continue-publaryn-slice.prompt.md  implement-publaryn-protocol-adapter.prompt.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
crates/adapters/cargo-registry/: Cargo.toml
crates/adapters/cargo-registry/src/: lib.rs  metadata.rs  name.rs  publish.rs  routes.rs
crates/adapters/composer/: Cargo.toml
crates/adapters/composer/src/: lib.rs  metadata.rs  name.rs  publish.rs  routes.rs
crates/adapters/maven/: Cargo.toml
crates/adapters/maven/src/: lib.rs  metadata.rs  name.rs  publish.rs  routes.rs
crates/adapters/npm/: Cargo.toml
crates/adapters/npm/src/: lib.rs  metadata.rs  name.rs  publish.rs  routes.rs
crates/adapters/oci/: Cargo.toml
crates/adapters/oci/src/: auth.rs  lib.rs  manifest.rs  name.rs  routes.rs  upload.rs
crates/adapters/pypi/: Cargo.toml
crates/adapters/pypi/src/: lib.rs  name.rs  routes.rs  simple.rs  upload.rs
crates/adapters/rubygems/: Cargo.toml
crates/adapters/rubygems/src/: gemspec.rs  lib.rs  metadata.rs  name.rs  publish.rs  routes.rs
crates/api/: Cargo.toml
crates/api/src/: cargo_bridge.rs  composer_bridge.rs  config.rs  error.rs  job_handlers.rs  lib.rs  main.rs  maven_bridge.rs  npm_bridge.rs  nuget_bridge.rs  oci_bridge.rs  package_search.rs  pypi_bridge.rs  rate_limit.rs  request_auth.rs  router.rs  rubygems_bridge.rs  scopes.rs  state.rs  storage.rs
crates/api/src/routes/: admin.rs  audit.rs  auth.rs  health.rs  mod.rs  namespaces.rs  openapi.rs  org_invitations.rs  orgs.rs  package_analysis.rs  packages.rs  pypi_oidc.rs  repositories.rs  search.rs  security.rs  stats.rs  tokens.rs  trusted_publishers.rs  users.rs
crates/api/tests/: integration_tests.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  mfa.rs  oidc.rs  password.rs  session.rs  token.rs
crates/auth/tests/: auth_tests.rs
crates/core/: Cargo.toml
crates/core/src/: authz_queries.rs  error.rs  lib.rs  policy.rs  security.rs  validation.rs
crates/core/src/domain/: artifact.rs  audit_log.rs  channel_ref.rs  mod.rs  namespace.rs  organization.rs  organization_invitation.rs  package.rs  release.rs  repository.rs  security_finding.rs  team.rs  token.rs  trusted_publisher.rs  user.rs
crates/core/tests/: domain_tests.rs
crates/search/: Cargo.toml
crates/search/src/: index.rs  lib.rs  query.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: auth_helpers.rs  db.rs  factories.rs  lib.rs
crates/workers/: Cargo.toml
crates/workers/src/: handler.rs  lib.rs  queue.rs  scanners.rs  worker.rs
docs/: 1.0.md  api-routes.md  concept.md  index.md  package.json  release-checklist.md
docs/.vitepress/: config.ts
docs/adr/: 0001-control-plane-request-authentication.md  0002-control-plane-scope-taxonomy.md  0003-registered-user-organization-invitations.md  0004-organization-ownership-transfer.md  0005-package-ownership-transfer-to-controlled-organizations.md  0006-control-plane-cors-origin-allowlist.md  0007-package-and-repository-read-visibility.md  0008-control-plane-package-creation.md  0009-control-plane-release-publication-and-artifact-storage.md  0010-npm-registry-protocol-adapter.md  0011-stateless-api-runtime-and-graceful-lifecycle.md  0012-team-package-governance.md  0013-pypi-simple-api-read-surface.md  0014-pypi-legacy-upload-bridge.md  0015-pypi-trusted-publishing.md  0016-cargo-alternative-registry-adapter.md  0017-nuget-v3-protocol-adapter.md  0018-rate-limiting-and-background-job-queue.md  0019-oci-distribution-adapter.md  0020-maven-deploy-adapter.md  0021-composer-publish-adapter.md  0022-rubygems-push-adapter.md  README.md
docs/architecture/: README.md
docs/operations/: README.md
docs/operator/: job-queue-recovery.md
docs/product/: 1.1.0-roadmap.md  README.md
docs/reference/: README.md
docs/releases/: 1.0.0.md  1.1.0.md  1.1.1.md  1.1.2.md  1.1.3.md  README.md
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: app.html  app.js  app.ts  router.js  router.ts  theme.js  theme.ts
frontend/tests/: bun-test.d.ts  ecosystem.test.ts  format.test.ts  login-route.test.ts  mfa-route-flows.test.ts  org-access-history.test.ts  org-audit-actors.test.ts  org-audit-filter-controls.test.ts  org-audit-format.test.ts  org-audit-query.test.ts  org-destructive-actions-controller.test.ts  org-governance-controller.test.ts  org-invitation-history.test.ts  org-member-picker.test.ts  (+42 more)
migrations/: 001_initial_schema.sql  002_org_invitations.sql  003_org_ownership_transfer.sql  004_release_artifact_uniqueness.sql  005_team_governance_audit_actions.sql  006_pypi_pep503_normalized_names.sql  007_pypi_trusted_publishing_replay_protection.sql  008_cargo_release_metadata.sql  009_nuget_release_metadata.sql  010_background_jobs.sql  011_mfa_recovery_codes.sql  012_org_update_audit_action.sql  013_trusted_publisher_audit_actions.sql  014_package_update_audit_action.sql  015_team_repository_access.sql  016_security_finding_reopen_audit_action.sql  017_oci_manifest_references.sql  018_rubygems_release_metadata.sql  019_repository_transfer_audit_action.sql  020_namespace_claim_delete_audit_action.sql  021_team_namespace_access.sql  022_pypi_release_metadata.sql  023_oci_blob_inventory_and_cleanup_jobs.sql  024_org_member_directory_visibility.sql  025_release_undeprecate_audit_action.sql  026_operator_job_recovery_audit_actions.sql
(+126 files in other folders)
