[workspace]
members = [
    "crates/core",
    "crates/api",
    "crates/auth",
    "crates/search",
    "crates/workers",
    "crates/test-utils",
    "crates/adapters/npm",
    "crates/adapters/pypi",
    "crates/adapters/cargo-registry",
    "crates/adapters/maven",
    "crates/adapters/nuget",
    "crates/adapters/rubygems",
    "crates/adapters/composer",
    "crates/adapters/oci",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0 AND MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.52.1", features = ["full"] }

# HTTP
axum = { version = "0.8.9", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-gzip", "request-id", "timeout", "fs"] }
hyper = { version = "1" }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "1.1.2+spec-1.1.0"

# Validation & errors
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.18"
anyhow = "1"

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }

# Crypto & security
argon2 = "0.5"
rand = "0.10.1"
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22"
blake2 = "0.10"
hex = "0.4.3"
jsonwebtoken = "10.3.0"
md-5 = "0.11.0"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# Tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }

# Config
config = "0.15.22"
dotenvy = "0.15.7"

# Object Storage (S3/MinIO)
aws-sdk-s3 = "1.129.0"
aws-config = "1"

# Search (Meilisearch)
meilisearch-sdk = "0.32.0"

# Redis
fred = { version = "10.1.0", features = ["enable-rustls", "enable-native-tls"] }

# Emails
lettre = { version = "0.11.21", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# HTTP client
reqwest = { version = "0.13.2", features = ["json", "rustls"] }

# OpenAPI
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Misc utilities
itertools = "0.14.0"
regex = "1.12.3"
url = "2.5.8"
mime = "0.3"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
once_cell = "1.21.4"
strsim = "0.11"
quick-xml = "0.39.2"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }

# Internal crates
publaryn-core = { path = "crates/core" }
publaryn-auth = { path = "crates/auth" }
publaryn-search = { path = "crates/search" }
publaryn-workers = { path = "crates/workers" }
publaryn-test-utils = { path = "crates/test-utils" }
publaryn-adapter-npm = { path = "crates/adapters/npm" }
publaryn-adapter-pypi = { path = "crates/adapters/pypi" }
publaryn-adapter-cargo-registry = { path = "crates/adapters/cargo-registry" }
publaryn-adapter-composer = { path = "crates/adapters/composer" }
publaryn-adapter-maven = { path = "crates/adapters/maven" }
publaryn-adapter-nuget = { path = "crates/adapters/nuget" }
publaryn-adapter-rubygems = { path = "crates/adapters/rubygems" }
