[package]
name = "publaryn-api"
version = "0.1.0"
edition = "2021"
description = "Publaryn HTTP API server"
license.workspace = true

[lib]
name = "publaryn_api"
path = "src/lib.rs"

[[bin]]
name = "publaryn"
path = "src/main.rs"

[dependencies]
publaryn-core = { workspace = true }
publaryn-auth = { workspace = true }
publaryn-search = { workspace = true }
publaryn-workers = { workspace = true }
publaryn-adapter-npm = { workspace = true }
publaryn-adapter-pypi = { workspace = true }
publaryn-adapter-cargo-registry = { workspace = true }
publaryn-adapter-composer = { workspace = true }
publaryn-adapter-maven = { workspace = true }
publaryn-adapter-nuget = { workspace = true }
publaryn-adapter-rubygems = { workspace = true }
publaryn-adapter-oci = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

config = { workspace = true }
dotenvy = { workspace = true }
fred = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }

utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }

[dev-dependencies]
publaryn-test-utils = { workspace = true }
tower = { workspace = true, features = ["util"] }
hyper = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
