[package]
name = "publaryn-auth"
version = "0.1.0"
edition = "2021"
description = "Authentication and authorization for Publaryn"

[dependencies]
publaryn-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
totp-rs = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
