[package]
name = "publaryn-search"
version = "0.1.0"
edition = "2021"
description = "Search indexing and querying for Publaryn"

[dependencies]
publaryn-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
meilisearch-sdk = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
