[package]
name = "publaryn-workers"
version = "1.0.0"
edition = "2021"
description = "Background job processing for Publaryn"
license.workspace = true

[dependencies]
publaryn-core = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }
