[package]
name = "publaryn-adapter-npm"
version = "0.1.0"
edition = "2021"
description = "Publaryn ecosystem adapter: npm"

[dependencies]
publaryn-core = { workspace = true }
publaryn-auth = { workspace = true }
publaryn-search = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
