[package]
name = "publaryn-adapter-oci"
version = "1.0.0"
edition = "2021"
description = "Publaryn ecosystem adapter: oci"
license.workspace = true

[dependencies]
publaryn-core = { workspace = true }
publaryn-auth = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true }
