[package]
name = "publaryn-adapter-pypi"
version = "0.1.0"
edition = "2021"
description = "Publaryn ecosystem adapter: pypi"
license.workspace = true

[dependencies]
publaryn-core = { workspace = true }
publaryn-auth = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
blake2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
md-5 = { workspace = true }
sqlx = { workspace = true }
