[package]
name = "publaryn-adapter-rubygems"
version = "0.1.0"
edition = "2021"
description = "Publaryn ecosystem adapter: rubygems"
license.workspace = true

[dependencies]
publaryn-core = { workspace = true }
publaryn-auth = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
serde_yaml_ng = { workspace = true }
